<resources>
    <string name="app_name">SubSystem</string>
    <string name="login">登录</string>
    <string name="username">username</string>
    <string name="inputUsername">请输入用户名</string>
    <string name="register">注册</string>
    <string name="forget">忘记密码</string>
    <string name="inputPassword">请输入密码</string>
    <string name="forgetPassword">记住密码</string>
    <string name="inputPhone">请输入手机号</string>
    <string name="inputName">请输入真实姓名</string>
    <string name="welcome">欢迎来到登录子系统App</string>
    <string name="sign">——张金鑫</string>
    <string name="registerAccount">注册账号</string>
    <string name="confirm_changes">确认修改</string>
    <string name="inputAlignPassword">请再次输入新密码</string>
    <string name="inputOldPassword">请输入旧密码</string>
    <string name="inputNewPassword">请输入新密码</string>
    <string name="phone_registered">手机号已被注册</string>
    <string name="name_registered">该用户已注册过</string>
    <string name="username_occupied">用户名已被使用</string>
    <string name="register_successful">注册成功！</string>
    <string name="go_register">没有账号？去注册</string>
    <string name="retrieve_password">找回密码</string>
    <string name="go_login">已有账号？去登陆</string>
    <string name="news_list">新闻列表</string>
    <string name="logout">退出登录</string>
    <string name="news">新闻</string>
    <string name="mine">我的</string>
</resources>