<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/retrieve_password"
        android:textColor="@color/black"
        android:textSize="30sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLines="1"
            android:hint="@string/inputPhone"
            android:inputType="textPhonetic"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/inputName"
            android:maxLines="1"

            android:inputType="textPhonetic"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/inputUsername"
            android:maxLines="1"

            android:inputType="number"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/editTextOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/inputOldPassword"
            android:maxLines="1"

            android:inputType="textPassword"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/editTextNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/inputNewPassword"
            android:maxLines="1"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/inputAlignPassword"
            android:inputType="textPassword"
            android:textSize="20sp" />
        <Button
            android:id="@+id/confirm_change"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/btn_login"
            android:text="@string/confirm_changes"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>